--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-oauth2-client-password": "^0.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
