--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.4",
     "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -28,13 +29,10 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
-
     "passport-google-oauth20": "^2.0.0",
     "passport-google-strategy": "^1.0.3",
     "passport-local": "^1.0.0",
-
     "passport-oauth2-client-password": "^0.1.2"
-
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
